--- a/frontend/atms/src/styling/LandlordStyling/PropertiesPage.css
+++ b/frontend/atms/src/styling/LandlordStyling/PropertiesPage.css
@@ -50,13 +50,15 @@ h1 {
     margin-right: 10px;
     gap: 10px;
     margin-top: 30px;
+    width: 80%;
 }
 
 .cardMainText {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     gap: 10px;
 }
@@ -142,7 +144,7 @@ p {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     gap: 20px;
     width: 100%;
