Created Payment Options UI

--- a/frontend/atms/src/styling/LandlordStyling/Landlord_Navbar.css
+++ b/frontend/atms/src/styling/LandlordStyling/Landlord_Navbar.css
@@ -31,7 +31,7 @@
 }
 
 .sidebar a.active {
-  background-color: var(--sidebar-selected);
+  background-color: var(--siderbar-selected);
 }
 
 @media (max-width: 842px) {
