--- a/frontend/atms/src/styling/LandlordStyling/TenantsPage.css
+++ b/frontend/atms/src/styling/LandlordStyling/TenantsPage.css
@@ -56,7 +56,8 @@
     cursor: pointer;
 }
 
-.back-btn,.cancel-btn {
+.back-btn,
+.cancel-btn {
     margin-right: 30px;
     padding: 12px;
     background-color: var(--white-button);
@@ -71,11 +72,13 @@
 .back-btn:hover {
     background-color: var(--white-button-hover);
 }
+
 .cancel-btn:hover {
     background-color: var(--white-button-hover);
 }
 
-.addTenant-btn,.save-btn {
+.addTenant-btn,
+.save-btn {
     font-weight: 550;
     background-color: var(--blue-button);
     color: white;
@@ -88,35 +91,42 @@
 .addTenant-btn:hover {
     background-color: var(--hoverBlue-color);
 }
+
 .save-btn:hover {
     background-color: var(--hoverBlue-color);
 }
 
-.modal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: var(--card-color);
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    width: 90%;
-    max-width: 400px;
-    z-index: 1000;
-}
 .modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: 999;
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--card-color);
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    width: 90%;
+    max-width: 400px;
+    z-index: 1000;
+    overflow-y: auto;
+}
+
+.modal form {
+    width: 100%;
 }
 
 .error {
@@ -125,12 +135,6 @@
 
 .overdue {
     color: red;
-}
-
-.modal form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
 .modal label {
@@ -161,28 +165,13 @@
     padding: 10px;
 }
 
-.table-wrapper {
-    overflow-x: auto;
-    width: 100%;
-}
-
-
 @media (max-width: 820px) {
-
     .modal .button-container {
         flex-direction: column;
-        justify-content: flex-start;
         gap: 10px;
     }
 
     .modal .button-container button {
-        width: 100%;
-    }
-
-    .Main{
-        flex-direction: column;
-    }
-    .addTenant-btn{
         width: 100%;
     }
 }
