--- a/frontend/atms/src/styling/LandlordStyling/PropertiesPage.css
+++ b/frontend/atms/src/styling/LandlordStyling/PropertiesPage.css
@@ -11,6 +11,26 @@ h1 {
     margin-bottom: 0px;
 }
 
+.h3{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.heading{
+    font-size: 30px;
+    font-weight: 600;
+    color: var(--maintext-color);
+}
+
+.cardHeading{
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--heading-color);
+    margin-bottom: -10px;
+    color: var(--maintext-color);
+}
+
 .smallText {
     color: var(--smalltext-color);
 }
@@ -87,6 +107,7 @@ h1 {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    color: var(--maintext-color);
 }
 
 h2,
@@ -118,12 +139,14 @@ p {
 
 .AddPropertyBtn {
     font-weight: 550;
+    font-size: 14px;
     background-color: var(--blue-button);
     color: white;
     border: none;
     border-radius: 5px;
     width: 110px;
     height: 43px;
+    padding: 4px;
 }
 
 .AddPropertyBtn:hover {
@@ -132,6 +155,7 @@ p {
 
 .viewBtn {
     font-weight: 550;
+    font-size: 15px;
     background-color: var(--blue-button);
     color: white;
     border: none;
