--- a/frontend/atms/src/styling/LandlordStyling/TenantsPage.css
+++ b/frontend/atms/src/styling/LandlordStyling/TenantsPage.css
@@ -12,8 +12,19 @@
     gap: 10px;
 }
 
+.cardMainText{
+    margin-top: 10px;
+    font-size: 30px;
+    font-weight: 600;
+    color: var(--heading-color);
+    margin-bottom: -10px;
+    color: var(--maintext-color);
+}
+
 .addr {
     margin-top: 5px;
+    font-size: 16px;
+    font-weight:lighter;
 }
 
 .tenants-table {
@@ -52,7 +63,6 @@
 .delete-btn,
 .edit-btn {
     border: none;
-    background-color: var(--card-color);
     cursor: pointer;
 }
 
@@ -61,7 +71,7 @@
     margin-right: 30px;
     padding: 12px;
     background-color: var(--white-button);
-    color: black;
+    color: var(--maintext-color);
     border: 1px solid rgb(191, 197, 216);
     border-radius: 4px;
     font-weight: 600;
@@ -75,6 +85,11 @@
 
 .cancel-btn:hover {
     background-color: var(--white-button-hover);
+}
+
+.addTenant-btn{
+    font-size: 14px;
+    padding: 10px;
 }
 
 .addTenant-btn,
