Fixed Menu Icon color change on theme

--- a/frontend/atms/src/styling/LandlordStyling/LandlordLayout.css
+++ b/frontend/atms/src/styling/LandlordStyling/LandlordLayout.css
@@ -65,11 +65,15 @@ body {
   background-color: var(--white-button-hover);
 }
 
-.menuIcon {
-  margin-left: 20px;
-  width: 25px;
-  cursor: pointer;
+.menu-icon {
+  font-size: 25px;
+  color: var(--maintext-color);
+  font-weight: 600;
 }
+.menu-icon:hover {
+  opacity: 0.8;
+}
+
 
 .main-content {
   padding: 20px;
