logIn page theme fixes

--- a/frontend/atms/src/styling/LandlordStyling/TenantsPage.css
+++ b/frontend/atms/src/styling/LandlordStyling/TenantsPage.css
@@ -144,6 +144,18 @@
     width: 100%;
 }
 
+h3{
+    color: var(--maintext-color)
+}
+
+label{
+    color: var(--maintext-color)
+}
+
+input{
+    color: var(--maintext-color);
+}
+
 .error {
     border: 2px solid red !important;
 }
