--- a/frontend/atms/src/styling/LandlordStyling/SettingsPage.css
+++ b/frontend/atms/src/styling/LandlordStyling/SettingsPage.css
@@ -129,7 +129,11 @@ label {
 
 .selected {
     background-color: white;
+    color: black;
     border-radius: 5px;
+}
+.notselected{
+    color: black;
 }
 
 .changeBtn {
