--- a/frontend/atms/src/styling/UserRegisterationStyling/login.css
+++ b/frontend/atms/src/styling/UserRegisterationStyling/login.css
@@ -1,15 +1,29 @@
 @import "tailwindcss";
 
 .login-blur-bg {
-    background-image: url('https://images.unsplash.com/photo-1554995207-c18c203602cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
-    background-size: cover;
-    background-position: center;
-    filter: blur(3px) brightness(1);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-  
+  background-image: url('https://images.unsplash.com/photo-1554995207-c18c203602cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
+  background-size: cover;
+  background-position: center;
+  filter: blur(3px) brightness(1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.text-black {
+  color: black !important;
+}
+
+.text-gray-700, .text-gray-900, .text-gray-600 {
+  color: black !important;
+}
+
+input, textarea, select {
+  color: black !important;
+}
+label {
+  color: black !important;
+}
